--- a/host/pybar_gpac.yaml
+++ b/host/pybar_gpac.yaml
@@ -17,10 +17,8 @@ transfer_layer:
     - name     : USB
       type     : SiUsb
       bit_file : "config/fpga/top_gpac.bit"
-      init:
-          board_id       : 
-          force_download : True
-      
+      board_id       : 
+      avoid_download : False
 
 hw_drivers:
   - name      : cmd
@@ -59,20 +57,20 @@ registers:
   - name        : CCPD_Vdd
     type        : FunctionalRegister
     hw_driver   : GPAC
-    arg_names   : [ value ]
-    arg_add     : { 'channel': 'PWR0'}
+    arg_names   : [value]
+    arg_add     : {'channel': 'PWR0'}
   - name        : V_in
     type        : FunctionalRegister
     hw_driver   : GPAC
-    arg_names   : [ value ]
-    arg_add     : { 'channel': 'PWR1'}
+    arg_names   : [value]
+    arg_add     : {'channel': 'PWR1'}
   - name        : CCPD_Vssa
     type        : FunctionalRegister
     hw_driver   : GPAC
-    arg_names   : [ value ]
-    arg_add     : { 'channel': 'PWR2'}
+    arg_names   : [value]
+    arg_add     : {'channel': 'PWR2'}
   - name        : CCPD_VGate
     type        : FunctionalRegister
     hw_driver   : GPAC
-    arg_names   : [ value ]
-    arg_add     : { 'channel': 'PWR3'}
+    arg_names   : [value]
+    arg_add     : {'channel': 'PWR3'}
