--- a/trunk/host/pybar_gpac.yaml
+++ b/trunk/host/pybar_gpac.yaml
@@ -21,6 +21,11 @@ transfer_layer:
       avoid_download : False
 
 hw_drivers:
+  - name      : GPAC
+    type      : GPAC
+    interface : USB
+    base_addr : 0x0
+
   - name      : cmd
     type      : cmd_seq
     interface : USB
@@ -30,6 +35,7 @@ hw_drivers:
     type      : sram_fifo
     interface : USB
     base_addr : 0x18100
+    base_data_addr : 0x0001000000000000
 
   - name      : tlu
     type      : tlu
@@ -41,34 +47,98 @@ hw_drivers:
     interface : USB
     base_addr : 0x18300
 
-  - name      : tdc_hitor
+  - name      : tdc_rx2
     type      : tdc_s3
     interface : USB
     base_addr : 0x18700
 
-  - name      : GPAC
-    type      : GPAC
+  - name      : gpio_rx
+    type      : gpio
     interface : USB
-    base_addr : 0x0
+    base_addr : 0x18800
+
+  - name      : GPAC_SPI
+    type      : spi
+    interface : USB
+    base_addr : 0x18900
+    mem_bytes : 2
+
+  - name      : GPAC_ADC
+    type      : fadc_rx
+    interface : USB
+    base_addr : 0x18940
+
+  - name      : GPAC_ADC_1
+    type      : fadc_rx
+    interface : USB
+    base_addr : 0x18950
+
+  - name      : CCPD_GLOBAL_SPI
+    type      : spi
+    interface : USB
+    base_addr : 0x18980
+    mem_bytes : 15
+
+  - name      : CCPD_TDCGATE_PULSE
+    type      : pulse_gen
+    interface : USB
+    base_addr : 0x18A00
+
+  - name      : CCPD_INJ_PULSE
+    type      : pulse_gen
+    interface : USB
+    base_addr : 0x18A80
+
+  - name      : CCPD_CONFIG_SPI
+    type      : spi
+    interface : USB
+    base_addr : 0x19000
+    mem_bytes : 54
+
+  - name      : CCPD_TDC
+    type      : tdc_s3
+    interface : USB
+    base_addr : 0x19100
 
 user_drivers:
 
 registers:
+  - name        : RX
+    type        : StdRegister
+    hw_driver   : gpio_rx
+    size        : 8
+    fields:
+      - name    : CCPD_TDC
+        size    : 1
+        offset  : 3
+      - name    : TDC
+        size    : 1
+        offset  : 2
+      - name    : TLU
+        size    : 1
+        offset  : 1
+      - name    : FE
+        size    : 1
+        offset  : 0
+
   - name        : CCPD_Vdd
     type        : FunctionalRegister
     hw_driver   : GPAC
     arg_names   : [value]
     arg_add     : {'channel': 'PWR0'}
+
   - name        : V_in
     type        : FunctionalRegister
     hw_driver   : GPAC
     arg_names   : [value]
     arg_add     : {'channel': 'PWR1'}
+
   - name        : CCPD_Vssa
     type        : FunctionalRegister
     hw_driver   : GPAC
     arg_names   : [value]
     arg_add     : {'channel': 'PWR2'}
+
   - name        : CCPD_VGate
     type        : FunctionalRegister
     hw_driver   : GPAC
