--- a/device/MultiIO/FPGA_GPAC/src/top.ucf
+++ b/device/MultiIO/FPGA_GPAC/src/top.ucf
@@ -28,7 +28,7 @@ NET "FCLK_IN" TNM_NET = "TNM_FCLK_IN";
 #TIMESPEC TS_FCLK_IN = PERIOD "TNM_FCLK_IN" 20.833 ns HIGH 50 %;
 TIMESPEC TS_FCLK_IN = PERIOD "TNM_FCLK_IN" 20.8 ns HIGH 50 %;
 
-NET "icmd/i_cmd_seq_core/BUS_CLK" TNM_NET = "tn_BUS_CLK";
+NET "i_ccpd_tdc/i_tdc_s3_core/BUS_CLK" TNM_NET = "tn_BUS_CLK";
 
 NET "icmd/i_cmd_seq_core/CMD_CLK_IN" TNM_NET = "tn_CLK_40";
 TIMESPEC TS_FALSE_CLK_40_BUS_CLK = FROM "tn_CLK_40" TO "tn_BUS_CLK" TIG ;
@@ -211,8 +211,8 @@ NET "MULTI_IO[0]" LOC = K2;
 NET "MULTI_IO[0]" IOSTANDARD = LVCMOS33;
 
 # fix for USBpix cards below hardware version 1.04 which have I2C fix
-NET "SDA" LOC = D10 | IOSTANDARD = LVCMOS33 | FLOAT;
-NET "SCL" LOC = D14 | IOSTANDARD = LVCMOS33 | FLOAT;
+NET "SDA" LOC = D10 | FLOAT;
+NET "SCL" LOC = D14 | FLOAT;
 
 
 # ------ Trigger IOs ----------------------------------------------
@@ -414,28 +414,15 @@ NET "DEBUG_D[15]" LOC = U18;
 
 # ------ General purpose IOs --------------------------------------
 
-# input of data to clock phase alignment
-#NET "*DOBOUT_0_IBUF" MAXSKEW = 500 pS ;
-#NET "*DOBOUT_1_IBUF" MAXSKEW = 500 pS ;
-#NET "*DOBOUT_2_IBUF" MAXSKEW = 500 pS ;
-#NET "*DOBOUT_3_IBUF" MAXSKEW = 500 pS ;
-
-##INST "ifei4_rx/ireceiver_logic/sync_master_inst" RLOC_ORIGIN = "X2Y3";
-##TIMESPEC ts_sync = FROM FFS(*bz(0):*cz(0):*cz(1):*dz(0):*dz(1):*dz2) TO FFS = 420 MHz;
-#TIMESPEC ts_sync_4 = FROM FFS(ifei4_rx_4/ireceiver_logic/sync_master_inst/bz(0):ifei4_rx_4/ireceiver_logic/sync_master_inst/cz(0):ifei4_rx_4/ireceiver_logic/sync_master_inst/cz(1):ifei4_rx_4/ireceiver_logic/sync_master_inst/dz(0):ifei4_rx_4/ireceiver_logic/sync_master_inst/dz(1):ifei4_rx_4/ireceiver_logic/sync_master_inst/dz2) TO FFS = 320 MHz;
-#TIMESPEC ts_sync_3 = FROM FFS(ifei4_rx_3/ireceiver_logic/sync_master_inst/bz(0):ifei4_rx_3/ireceiver_logic/sync_master_inst/cz(0):ifei4_rx_3/ireceiver_logic/sync_master_inst/cz(1):ifei4_rx_3/ireceiver_logic/sync_master_inst/dz(0):ifei4_rx_3/ireceiver_logic/sync_master_inst/dz(1):ifei4_rx_3/ireceiver_logic/sync_master_inst/dz2) TO FFS = 320 MHz;
-#TIMESPEC ts_sync_2 = FROM FFS(ifei4_rx_2/ireceiver_logic/sync_master_inst/bz(0):ifei4_rx_2/ireceiver_logic/sync_master_inst/cz(0):ifei4_rx_2/ireceiver_logic/sync_master_inst/cz(1):ifei4_rx_2/ireceiver_logic/sync_master_inst/dz(0):ifei4_rx_2/ireceiver_logic/sync_master_inst/dz(1):ifei4_rx_2/ireceiver_logic/sync_master_inst/dz2) TO FFS = 320 MHz;
-#TIMESPEC ts_sync_1 = FROM FFS(ifei4_rx_1/ireceiver_logic/sync_master_inst/bz(0):ifei4_rx_1/ireceiver_logic/sync_master_inst/cz(0):ifei4_rx_1/ireceiver_logic/sync_master_inst/cz(1):ifei4_rx_1/ireceiver_logic/sync_master_inst/dz(0):ifei4_rx_1/ireceiver_logic/sync_master_inst/dz(1):ifei4_rx_1/ireceiver_logic/sync_master_inst/dz2) TO FFS = 320 MHz;
-
-#TIMESPEC ts_sync_rx = FROM FFS(*/ireceiver_logic/sync_master_inst/bz(0):*/ireceiver_logic/sync_master_inst/cz(0):*/ireceiver_logic/sync_master_inst/cz(1):*/ireceiver_logic/sync_master_inst/dz(0):*/ireceiver_logic/sync_master_inst/dz(1):*/ireceiver_logic/sync_master_inst/dz2) TO FFS = 320 MHz;
-
 # GPAC
 #NET "DIN[0]"  LOC = A17;
+NET "CCPD_SHIFT_OUT"  LOC = A17; // CCPD_SHIFT_OUT
 #NET "DIN[1]"  LOC = B14;
-NET "MONHIT"  LOC = B14 | IOSTANDARD = LVCMOS33; // FE Hitbus
+NET "MONHIT"  LOC = B14 | IOSTANDARD = LVCMOS25; // FE Hitbus
 #NET "DIN[2]"  LOC = C15;
 #NET "DIN[3]"  LOC = D13;
 #NET "DIN[4]"  LOC = A16;
+NET "CCPD_TDC"  LOC = A16; // CCPD_TDC
 #NET "DIN[5]"  LOC = C12;
 #NET "DIN[6]"  LOC = C14;
 #NET "DIN[7]"  LOC = B15;
@@ -446,9 +433,13 @@ NET "DOBOUT"  LOC = C7 | IOSTANDARD = LVCMOS33; // FE DOBOUT
 #NET "DIN[11]" LOC = A2;
 
 #NET "DOUT[0]"  LOC = A15;
+NET "CCPD_GLOBAL_SHIFT_CLK"  LOC = A15; // CCPD_GLOBAL_SHIFT_CLK
 #NET "DOUT[1]"  LOC = B13;
+NET "CCPD_CONFIG_SHIFT_CLK"  LOC = B13; // CCPD_CONFIG_SHIFT_CLK
 #NET "DOUT[2]"  LOC = A14;
+NET "CCPD_SHIFT_IN"  LOC = A14; // CCPD_SHIFT_IN
 #NET "DOUT[3]"  LOC = C11;
+NET "CCPD_SHIFT_LD"  LOC = C11; // CCPD_SHIFT_LD
 #NET "DOUT[4]"  LOC = A12;
 #NET "DOUT[5]"  LOC = A11;
 #NET "DOUT[6]"  LOC = D11;
@@ -468,23 +459,23 @@ NET "CMD_DATA" LOC = D9 | IOSTANDARD = LVCMOS33; // FE CMD
 #NET "DOUT[19]" LOC = C5;
 NET "CMD_CLK" LOC = C5 | IOSTANDARD = LVCMOS33; // FE CLK
 
-#NET "ADC_CLK_N"    LOC = A10;
-#NET "ADC_CLK_P"    LOC = B10;
-#NET "ADC_DCO_N"    LOC = E10;
-#NET "ADC_DCO_P"    LOC = F10;
-#NET "ADC_FCO_N"    LOC = E8;
-#NET "ADC_FCO_P"    LOC = F8;
-#NET "ADC_OUT_P[1]" LOC = D2;
-#NET "ADC_OUT_N[1]" LOC = D1;
-#NET "ADC_OUT_P[2]" LOC = E1;
-#NET "ADC_OUT_N[2]" LOC = E2;
-#NET "ADC_OUT_P[3]" LOC = F2;
-#NET "ADC_OUT_N[3]" LOC = G1;
-#NET "ADC_OUT_P[4]" LOC = H2;
-#NET "ADC_OUT_N[4]" LOC = H1;
-#NET "ADC_SDI"      LOC = G3;
-#NET "ADC_SCLK"     LOC = J1;
-#NET "ADC_CS_B"     LOC = H4;
-#NET "ADC_SDO"      LOC = J2;
+NET "ADC_CLK_N"    LOC = A10 | IOSTANDARD = LVDS_25;
+NET "ADC_CLK_P"    LOC = B10 | IOSTANDARD = LVDS_25;
+NET "ADC_DCO_N"    LOC = E10 | IOSTANDARD = LVDS_25 | DIFF_TERM = TRUE;
+NET "ADC_DCO_P"    LOC = F10 | IOSTANDARD = LVDS_25 | DIFF_TERM = TRUE;
+NET "ADC_FCO_N"    LOC = E8 | IOSTANDARD = LVDS_25 | DIFF_TERM = TRUE;
+NET "ADC_FCO_P"    LOC = F8 | IOSTANDARD = LVDS_25 | DIFF_TERM = TRUE;
+NET "ADC_OUT_P[0]" LOC = D2 | IOSTANDARD = LVDS_25 | DIFF_TERM = TRUE;
+NET "ADC_OUT_N[0]" LOC = D1 | IOSTANDARD = LVDS_25 | DIFF_TERM = TRUE;
+NET "ADC_OUT_P[1]" LOC = E1 | IOSTANDARD = LVDS_25 | DIFF_TERM = TRUE;
+NET "ADC_OUT_N[1]" LOC = E2 | IOSTANDARD = LVDS_25 | DIFF_TERM = TRUE;
+NET "ADC_OUT_P[2]" LOC = F2 | IOSTANDARD = LVDS_25 | DIFF_TERM = TRUE;
+NET "ADC_OUT_N[2]" LOC = G1 | IOSTANDARD = LVDS_25 | DIFF_TERM = TRUE;
+NET "ADC_OUT_P[3]" LOC = H2 | IOSTANDARD = LVDS_25 | DIFF_TERM = TRUE;
+NET "ADC_OUT_N[3]" LOC = H1 | IOSTANDARD = LVDS_25 | DIFF_TERM = TRUE;
+NET "ADC_SDI"      LOC = G3 | IOSTANDARD = LVCMOS33;
+NET "ADC_SCLK"     LOC = J1 | IOSTANDARD = LVCMOS33;
+NET "ADC_CS_B"     LOC = H4 | IOSTANDARD = LVCMOS33;
+NET "ADC_SDO"      LOC = J2 | IOSTANDARD = LVCMOS33 | PULLUP;
 
-#NET "INJ_STRB" LOC = B5;
+NET "INJ_STRB" LOC = B5 | IOSTANDARD = LVCMOS33;
