--- a/host/pybar.yaml
+++ b/host/pybar.yaml
@@ -30,6 +30,7 @@ hw_drivers:
     type      : sram_fifo
     interface : USB
     base_addr : 0x18100
+    base_data_addr : 0x0001000000000000
 
   - name      : tlu
     type      : tlu
@@ -56,7 +57,7 @@ hw_drivers:
     interface : USB
     base_addr : 0x18600
 
-  - name      : tdc_hitor
+  - name      : tdc_rx2
     type      : tdc_s3
     interface : USB
     base_addr : 0x18700
