--- a/branches/1.x.x/device/MultiIO/FPGA/src/top.ucf
+++ b/branches/1.x.x/device/MultiIO/FPGA/src/top.ucf
@@ -169,16 +169,16 @@ NET "FDATA[0]" LOC = V11;
 
 # ------ LED -------------------------------------------------------
 
-NET "LED5" IOSTANDARD = LVCMOS33;
-NET "LED5" LOC = U15;
-NET "LED4" IOSTANDARD = LVCMOS33;
-NET "LED4" LOC = V16;
-NET "LED3" IOSTANDARD = LVCMOS33;
-NET "LED3" LOC = V17;
-NET "LED2" IOSTANDARD = LVCMOS33;
-NET "LED2" LOC = U16;
-NET "LED1" IOSTANDARD = LVCMOS33;
-NET "LED1" LOC = P13;
+NET "LED[4]" IOSTANDARD = LVCMOS33;
+NET "LED[4]" LOC = U15;
+NET "LED[3]" IOSTANDARD = LVCMOS33;
+NET "LED[3]" LOC = V16;
+NET "LED[2]" IOSTANDARD = LVCMOS33;
+NET "LED[2]" LOC = V17;
+NET "LED[1]" IOSTANDARD = LVCMOS33;
+NET "LED[1]" LOC = U16;
+NET "LED[0]" IOSTANDARD = LVCMOS33;
+NET "LED[0]" LOC = P13;
 
 
 # ------ Button & Spare & more -------------------------------------
@@ -437,39 +437,38 @@ NET "DOBOUT[3]" LOC = A11;
 NET "DOBOUT[3]" IOSTANDARD = LVCMOS33;
 NET "DOBOUT[3]" PULLDOWN;
 
-# Enable LVDS Transceiver
-# EN_VA1 on SCC, EN_VDD1 on BIC
-NET "EN_V1" LOC = H6;
-NET "EN_V1" IOSTANDARD = LVCMOS33;
+# EN_VA1 on SCC, EN_VDD1 on BIC, Enables LVDS Transceiver on SCC
+NET "EN[0]" LOC = H6;
+NET "EN[0]" IOSTANDARD = LVCMOS33;
 # EN_VA2 on SCC, EN_VDD2 on BIC
-NET "EN_V2" LOC = G5;
-NET "EN_V2" IOSTANDARD = LVCMOS33;
+NET "EN[1]" LOC = G5;
+NET "EN[1]" IOSTANDARD = LVCMOS33;
 # EN_VD2 on SCC, EN_VDD3 on BIC
-NET "EN_V3" LOC = C1;
-NET "EN_V3" IOSTANDARD = LVCMOS33;
+NET "EN[2]" LOC = C1;
+NET "EN[2]" IOSTANDARD = LVCMOS33;
 # EN_VD1 on SCC, EN_VDD4 on BIC
-NET "EN_V4" LOC = F5;
-NET "EN_V4" IOSTANDARD = LVCMOS33;
+NET "EN[3]" LOC = F5;
+NET "EN[3]" IOSTANDARD = LVCMOS33;
 
 # Over Current Protection (BIC only)
-NET "OC1" LOC = F2;
-NET "OC1" IOSTANDARD = LVCMOS33;
-NET "OC2" LOC = E1;
-NET "OC2" IOSTANDARD = LVCMOS33;
-NET "OC3" LOC = D1;
-NET "OC3" IOSTANDARD = LVCMOS33;
-NET "OC4" LOC = D2;
-NET "OC4" IOSTANDARD = LVCMOS33;
+NET "OC[0]" LOC = F2;
+NET "OC[0]" IOSTANDARD = LVCMOS33;
+NET "OC[1]" LOC = E1;
+NET "OC[1]" IOSTANDARD = LVCMOS33;
+NET "OC[2]" LOC = D1;
+NET "OC[2]" IOSTANDARD = LVCMOS33;
+NET "OC[3]" LOC = D2;
+NET "OC[3]" IOSTANDARD = LVCMOS33;
 
 # Select (SEL) LED (BIC only)
-NET "SEL1" LOC = B14;
-NET "SEL1" IOSTANDARD = LVCMOS33;
-NET "SEL2" LOC = D13;
-NET "SEL2" IOSTANDARD = LVCMOS33;
-NET "SEL3" LOC = C12;
-NET "SEL3" IOSTANDARD = LVCMOS33;
-NET "SEL4" LOC = B15;
-NET "SEL4" IOSTANDARD = LVCMOS33;
+NET "SEL[0]" LOC = B14;
+NET "SEL[0]" IOSTANDARD = LVCMOS33;
+NET "SEL[1]" LOC = D13;
+NET "SEL[1]" IOSTANDARD = LVCMOS33;
+NET "SEL[2]" LOC = C12;
+NET "SEL[2]" IOSTANDARD = LVCMOS33;
+NET "SEL[3]" LOC = B15;
+NET "SEL[3]" IOSTANDARD = LVCMOS33;
 
 # Hit-OR input
 NET "MONHIT" LOC = E13;
