--- a/trunk/host/configuration.yaml
+++ b/trunk/host/configuration.yaml
@@ -10,23 +10,28 @@
 #  $Date::                      $:
 #
 
+USB:
+    bit_file : "config/fpga/top.bit"
+    board_id       : 
+    avoid_download : False
+
 cmd:
-  OUTPUT_MODE : 0  # 0: positive edge (default), 2: Manchester code
+    OUTPUT_MODE : 0  # 0: positive edge (default), 2: Manchester code
 
 tlu:
-  TRIGGER_MODE        : 0
-  EN_INVERT_TRIGGER   : 0
-  EN_WRITE_TIMESTAMP  : 0
-  TRIGGER_LOW_TIMEOUT : 0
+    TRIGGER_MODE        : 0
+    EN_INVERT_TRIGGER   : 0
+    EN_WRITE_TIMESTAMP  : 0
+    TRIGGER_LOW_TIMEOUT : 0
 
 rx_4:
-  INVERT_RX : 0  # 0: IBL modules (default), 1: DBM modules
+    INVERT_RX : 0  # 0: IBL modules (default), 1: DBM modules
 
 rx_3:
-  INVERT_RX : 0
+    INVERT_RX : 0
     
 rx_2:
-  INVERT_RX : 0
+    INVERT_RX : 0
 
 rx_1:
-  INVERT_RX : 0
+    INVERT_RX : 0
