--- a/host/pybar_gpac.yaml
+++ b/host/pybar_gpac.yaml
@@ -14,12 +14,8 @@ name    : pyBAR_GPAC
 version : 2.0.0
 
 transfer_layer:
-    - name     : USB
-      type     : SiUsb
-      init:
-          bit_file : "config/fpga/top_gpac.bit"
-          board_id       : 
-          avoid_download : False
+  - name     : USB
+    type     : SiUsb
 
 hw_drivers:
   - name      : GPAC
@@ -43,7 +39,7 @@ hw_drivers:
     interface : USB
     base_addr : 0x18200
 
-  - name      : rx
+  - name      : rx_fe
     type      : fei4_rx
     interface : USB
     base_addr : 0x18300
@@ -104,7 +100,7 @@ hw_drivers:
 user_drivers:
 
 registers:
-  - name        : RX
+  - name        : rx
     type        : StdRegister
     hw_driver   : gpio_rx
     size        : 8
