--- a/trunk/host/configuration_gpac.yaml
+++ b/trunk/host/configuration_gpac.yaml
@@ -11,7 +11,7 @@
 #
 
 USB:
-    bit_file       : "config/fpga/top.bit"
+    bit_file       : "config/fpga/top_gpac.bit"
     board_id       : 
     avoid_download : False
 
@@ -23,15 +23,3 @@ tlu:
     EN_INVERT_TRIGGER   : 0
     EN_WRITE_TIMESTAMP  : 0
     TRIGGER_LOW_TIMEOUT : 0
-
-rx_4:
-    INVERT_RX : 0  # 0: IBL modules (default), 1: DBM modules
-
-rx_3:
-    INVERT_RX : 0
-    
-rx_2:
-    INVERT_RX : 0
-
-rx_1:
-    INVERT_RX : 0
