--- a/trunk/host/MANIFEST.in
+++ b/trunk/host/MANIFEST.in
@@ -1,3 +1,9 @@
 include *.txt VERSION
 recursive-include docs *
 recursive-include examples *
+#recursive-include tests *
+include pybar *.yaml *.bit
+recursive-include pybar/config *
+recursive-include pybar/analysis *
+recursive-exclude pybar/analysis/RawDataConverter/build *
+global-exclude *.pyc *.pyd .project .pydevproject build
