--- a/host/MANIFEST.in
+++ b/host/MANIFEST.in
@@ -6,4 +6,4 @@ include pybar *.yaml *.bit
 recursive-include pybar/config *
 recursive-include pybar/analysis *
 recursive-exclude pybar/analysis/RawDataConverter/build *
-global-exclude *.pyc *.pyd .project .pydevproject build
+global-exclude *.pyc .project .pydevproject build
