--- a/trunk/host/pybar/config/fei4/configs/std_cfg_fei4b.cfg
+++ b/trunk/host/pybar/config/fei4/configs/std_cfg_fei4b.cfg
@@ -1,5 +1,5 @@
 # Chip Parameters
-Flavor FEI4B
+Flavor fei4b
 Chip_ID 8 Broadcast = 8
 
 # Global Registers
@@ -100,8 +100,12 @@ Imon 1
 TDAC 16
 
 # Calibration Parameters
-C_Inj_Low 0.000000
-C_Inj_High 0.000000
-Vcal_Coeff_0 0.000000
-Vcal_Coeff_1 0.000000
+C_Inj_Low 2.0
+C_Inj_Med 4.1
+C_Inj_High 6.1
+Vcal_Coeff_0 None
+Vcal_Coeff_1 None
+Pulser_Corr_C_Inj_Low None
+Pulser_Corr_C_Inj_Med None
+Pulser_Corr_C_Inj_High None
 
