--- a/trunk/host/pybar/configuration.yaml
+++ b/trunk/host/pybar/configuration.yaml
@@ -1,9 +1,27 @@
-# working_dir : 'data/'  # data output path, can be omitted; if not given, path of this file will be working directory
+working_dir : # data/  # path to DUT hardware configuration file (.yaml), DUT init configuration file (.yaml) and FPGA bit file (.bit). Data will be written to this path. If not given, path of this file is taken. Default: not given / empty
 
-dut_configuration:
-    dut : "dut_usbpix.yaml"  # DUT hardware configuration
-#    dut_configuration : "dut_configuration_usbpix.yaml"  # DUT configuration for initialization, can be omitted
+dut : dut_usbpix.yaml  # DUT hardware configuration (.yaml). Change to dut_usbpix_gpac.yaml for GPAC card.
+dut_configuration : # dut_configuration_usbpix.yaml  # DUT init configuration (.yaml). Default: not given / empty
 
-fe_configuration:
-    configuration : config/fei4/configs/std_cfg_fei4a.cfg  # path to the FE configuration file, text (.cfg) or HDF5 (.h5) file, can be omitted
-    module_id : 'test module'  # module identifier/name, an extra subfolder in working directory will be created
+fe_configuration : config/fei4/configs/std_cfg_fei4a.cfg  # FE configuration file, text (.cfg) or HDF5 (.h5) file. If not given, latest valid configuration (run status FINISHED) will be taken. If a number is given, configuration from run with specified number will be taken.
+module_id : test_module  # module identifier / name, sub-folder with given name will be created inside working_dir
+
+#
+# *** run configuration can be added here ***
+#
+#Fei4Tuning:
+#    enable_shift_masks : ["Enable", "C_Low", "C_High"]
+#    target_threshold : 50 # target threshold
+#    target_charge : 250 # target charge
+#    target_tot : 5 # target ToT
+#    global_iterations : 4
+#    local_iterations : 3
+#
+#AnalogScan:
+#    scan_parameters : {'PlsrDAC': 250}
+#    enable_shift_masks : ["Enable", "C_Low", "C_High"]
+#
+#ThresholdScan:
+#    scan_parameters : {'PlsrDAC': [0, 100]}
+#    enable_shift_masks : ["Enable", "C_Low", "C_High"]
+#
