ENH: pulldown will not work, level shifter

--- a/device/MultiIO/FPGA_GPAC/src/top.ucf
+++ b/device/MultiIO/FPGA_GPAC/src/top.ucf
@@ -418,7 +418,7 @@ NET "DEBUG_D[15]" LOC = U18;
 #NET "DIN[0]"  LOC = A17;
 NET "CCPD_SHIFT_OUT"  LOC = A17; // CCPD_SHIFT_OUT
 #NET "DIN[1]"  LOC = B14;
-NET "MONHIT"  LOC = B14 | IOSTANDARD = LVCMOS25 | PULLDOWN; // FE Hitbus
+NET "MONHIT"  LOC = B14 | IOSTANDARD = LVCMOS25; // FE Hitbus
 #NET "DIN[2]"  LOC = C15;
 #NET "DIN[3]"  LOC = D13;
 #NET "DIN[4]"  LOC = A16;
