--- a/host/pybar/dut_configuration_usbpix.yaml
+++ b/host/pybar/dut_configuration_usbpix.yaml
@@ -11,12 +11,12 @@
 #
 
 USB:
-    bit_file       : "top.bit"  # adjust path if necessary
+    bit_file       : "mio.bit"
     board_id       : 
     avoid_download : False
 
 cmd:
-    OUTPUT_MODE : 0  # 0: positive edge (default), 2: Manchester encoding
+    OUTPUT_MODE : 0  # 0: positive edge (default), 2: Manchester code
 
 tlu:
     TRIGGER_MODE        : 0
