--- a/device/MultiIO/FPGA/src/top_gpac.ucf
+++ b/device/MultiIO/FPGA/src/top_gpac.ucf
@@ -1,22 +1,29 @@
-#...............................................................................
-#  Constraints File - Xilinx UCF format
+# This file is part of pyBAR.
+# 
+# pyBAR is free software: you can redistribute it and/or modify
+# it under the terms of the GNU Lesser General Public License as published by
+# the Free Software Foundation, either version 3 of the License, or
+# (at your option) any later version.
+# 
+# pyBAR is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU Lesser General Public License for more details.
+# 
+# You should have received a copy of the GNU Lesser General Public License
+# along with pyBAR.  If not, see <http://www.gnu.org/licenses/>.
+
 #
-#       Device  :       XC3S1000-4FGG320C
-#       Board   :       S3-Multi-IO-Board V1.03
-#       Project :       S3_Multi_IO_USB
+# ------------------------------------------------------------
+# Copyright (c) All rights reserved
+# SiLab, Institute of Physics, University of Bonn
+# ------------------------------------------------------------
 #
-#       Autor   :       Johannes Schneider
-#       Created :       09.12.2008
+# SVN revision information:
+#  $Rev::                       $:
+#  $Author::                    $:
+#  $Date::                      $:
 #
-#...............................................................................
-#
-#     TargetId=XC3S1000-4FGG320C
-#
-#   Msel_0 = "0";       # Programming Mode
-#   Msel_1 = "1";       # Programming Mode
-#   Msel_2 = "1";       # Programming Mode
-#
-#...............................................................................
 
 
 # ------ Constraints -----------------------------------------------
