--- a/device/MultiIO/FPGA/cosim/Makefile
+++ b/device/MultiIO/FPGA/cosim/Makefile
@@ -27,11 +27,12 @@ export PYTHONHOME=$(shell python -c "from distutils.sysconfig import get_config_
 XILINX_SRC?=$(XILINX)/ISE/verilog/src
    
 BASIL?=../../../../../../basil
-BASIL_MODULES=$(BASIL)/trunk/device/modules
+BASIL_MODULES?=$(BASIL)/trunk/device/modules
 FEI4_SOURCES?=../../../../../../fei4/trunk/models/fei4a
+PYBAR_SOURCES?=../../device/MultiIO/FPGA
 
 VERILOG_SOURCES = \
-                  tb.sv ../src/top.v ../src/clk_gen.v \
+                  $(PYBAR_SOURCES)/cosim/tb.sv $(PYBAR_SOURCES)/src/top.v $(PYBAR_SOURCES)/src/clk_gen.v \
                   $(XILINX_SRC)/unisims/IFDDRRSE.v \
                   $(XILINX_SRC)/unisims/BUFG.v \
                   $(XILINX_SRC)/unisims/OFDDRRSE.v \
@@ -85,4 +86,8 @@ MODULE   = basil.utils.sim.Test
 
 include $(COCOTB)/makefiles/Makefile.inc
 include $(COCOTB)/makefiles/Makefile.sim
- 
+
+sim_only: $(CUSTOM_SIM_DEPS) $(COCOTB_LIBS) $(COCOTB_VPI_LIB) $(CUSTOM_COMPILE_DEPS)
+	PYTHONPATH=$(LIB_DIR):$(SIM_ROOT):$(PWD):$(PYTHONPATH) $(LIB_LOAD) MODULE=$(MODULE) \
+        TESTCASE=$(TESTCASE) TOPLEVEL=$(TOPLEVEL) \
+        vvp -M $(LIB_DIR) -m gpivpi $(SIM_BUILD)/sim.vvp $(SIM_ARGS) $(EXTRA_ARGS) $(PLUSARGS)
