BUG: Try to fix travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -40,4 +40,4 @@ install:
  
 # Run test
 script:
-- cd test; nosetests test_analysis.py test_interface.py --logging-level=INFO
+- cd tests; nosetests test_analysis.py test_interface.py --logging-level=INFO
