--- a/device/MultiIO/FPGA/cosim/Makefile
+++ b/device/MultiIO/FPGA/cosim/Makefile
@@ -18,9 +18,11 @@ export SIMULATION_BUS
 export SIMULATION_END_ON_DISCONNECT
 
 #to make life bit easier
-export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$(shell python -c 'from distutils import sysconfig; print(sysconfig.get_config_var("LIBDIR"))')
-export PYTHONPATH=$PYTHONPATH:$(shell python -c "from distutils import sysconfig; print(sysconfig.get_python_lib())"):$(COCOTB)
+PYTHONLIBS=$(shell python -c 'from distutils import sysconfig; print(sysconfig.get_config_var("LIBDIR"))')
+export LD_LIBRARY_PATH+=$(PYTHONLIBS)
+export PYTHONPATH+=$(shell python -c "from distutils import sysconfig; print(sysconfig.get_python_lib())"):$(COCOTB)
 export PYTHONHOME=$(shell python -c "from distutils.sysconfig import get_config_var; print(get_config_var('prefix'))")
+
 
 # Must have XILINX set as an environment variable.
 # i.e. export XILINX=~/Xilinx/14.7/ISE_DS
@@ -88,6 +90,6 @@ include $(COCOTB)/makefiles/Makefile.inc
 include $(COCOTB)/makefiles/Makefile.sim
 
 sim_only: $(CUSTOM_SIM_DEPS) $(COCOTB_LIBS) $(COCOTB_VPI_LIB) $(CUSTOM_COMPILE_DEPS)
-	PYTHONPATH=$(LIB_DIR):$(SIM_ROOT):$(PWD):$(PYTHONPATH) $(LIB_LOAD) MODULE=$(MODULE) \
+	PYTHONPATH=$(LIB_DIR):$(SIM_ROOT):$(PWD):$(PYTHONPATH) LD_LIBRARY_PATH=/lib/x86_64-linux-gnu:$(LIB_DIR):$(PYTHONLIBS) MODULE=$(MODULE) \
         TESTCASE=$(TESTCASE) TOPLEVEL=$(TOPLEVEL) \
         vvp -M $(LIB_DIR) -m gpivpi $(SIM_BUILD)/sim.vvp $(SIM_ARGS) $(EXTRA_ARGS) $(PLUSARGS)
