--- a/host/tests/test_interface/configuration.yaml
+++ b/host/tests/test_interface/configuration.yaml
@@ -1,6 +1,6 @@
 working_dir : # data/  # path to DUT hardware configuration file (.yaml), DUT init configuration file (.yaml) and FPGA bit file (.bit). Data will be written to this path. If not given, path of this file is taken. Default: not given / empty
 
-dut : dut_usbpix_sim.yaml  # DUT hardware configuration (.yaml). Change to dut_usbpix_gpac.yaml for GPAC card.
+dut : dut_mio_sim.yaml  # DUT hardware configuration (.yaml). Change to dut_usbpix_gpac.yaml for GPAC card.
 dut_configuration : # dut_configuration_usbpix.yaml  # DUT init configuration (.yaml). Default: not given / empty
 
 fe_configuration :  # FE configuration file, text (.cfg) or HDF5 (.h5) file. If not given, latest valid configuration (run status FINISHED) will be taken. If a number is given, configuration from run with specified number will be taken.
