ENH: ease initialization of other DUTs

--- a/pybar/configuration.yaml
+++ b/pybar/configuration.yaml
@@ -1,7 +1,7 @@
-working_dir : # data/  # path to DUT hardware configuration file (.yaml), DUT init configuration file (.yaml) and FPGA bit file (.bit). Data will be written to this path. If not given, path of this file is taken. Default: not given / empty
+working_dir :  # Module data will be written to this path. If not given, use path of this file. Default: not given / empty
 
-dut : dut_mio.yaml  # DUT hardware configuration (.yaml). Change to dut_mio_gpac.yaml for GPAC card support.
-dut_configuration : # dut_configuration_usbpix.yaml  # DUT init configuration (.yaml). Default: not given / empty
+dut : dut_mio.yaml  # DUT hardware configuration (.yaml). Change to dut_mio_gpac.yaml for GPAC support.
+dut_configuration : dut_configuration_mio.yaml  # DUT init configuration (.yaml). Change to dut_configuration_mio_gpac.yaml for GPAC support.
 
 fe_configuration :  # FE configuration file, text (.cfg) or HDF5 (.h5) file. If not given, latest valid configuration (run status FINISHED) will be taken. If a number is given, configuration from run with specified number will be taken.
 fe_flavor : fei4a  # FEI4 flavor/type for initial configuration. Valid values: 'fei4a' or 'fei4b'
