ENH: do not check old not worling scans

--- a/.landscape.yaml
+++ b/.landscape.yaml
@@ -1,5 +1,6 @@
 max-line-length: 300
 ignore-paths:
     - pybar/ViTablesPlugin
+    - pybar/scans/deprecated
 ignore-patterns:
     - analyze_test_beam
