Create separate raw data files for each FE with filtering data.

--- a/pybar/configuration.yaml
+++ b/pybar/configuration.yaml
@@ -3,7 +3,7 @@ working_dir :  # Module data will be written to this path. If not given, use pat
 dut : dut_mio.yaml  # DUT hardware configuration (.yaml). Change to dut_mio_gpac.yaml for GPAC support.
 dut_configuration : dut_configuration_mio.yaml  # DUT init configuration (.yaml). Change to dut_configuration_mio_gpac.yaml for GPAC support.
 
-number_of_fes:  # Number of FEs to be readout, if not given, number of FEs is 1
+number_of_fes: 2 # Number of FEs to be readout, if not given, number of FEs is 1
 fe_configuration :  # FE configuration file, text (.cfg) or HDF5 (.h5) file. If not given, latest valid configuration (run status FINISHED) will be taken. If a number is given, configuration from run with specified number will be taken.
 fe_flavor : fei4b  # FEI4 flavor/type for initial configuration. Valid values: 'fei4a' or 'fei4b'
 chip_address :  # Chip Address for initial configuration, if not given, broadcast bit will be set
