MAINT: try to get it to work

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -25,7 +25,7 @@ init:
 install:
   - pip install https://github.com/walac/pyusb/archive/master.zip
   - pip install https://silab-redmine.physik.uni-bonn.de/attachments/download/735/pySiLibUSB-2.0.3.tar.gz
-  - git clone -b development https://github.com/SiLab-Bonn/basil; cd basil/host; python.exe setup.py develop; cd..; cd..
+  - pip install -e "git+https://github.com/SiLab-Bonn/basil.git@development#egg=basil&subdirectory=host"
   - python.exe setup.py develop
 
 test_script:
