--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ before_install:
   - conda info -a
   - conda create --yes -n test-environment numpy cython pytables scipy matplotlib pandas pyserial bitarray nose pyzmq pyyaml
   - source activate test-environment
-  - pip install progressbar-latest pyvisa pyvisa-py
+  - pip install progressbar-latest pyvisa pyvisa-py mock
 #  - wget -O cocotb-master.zip https://github.com/potentialventures/cocotb/archive/master.zip 
 #  - unzip cocotb-master.zip
 #  - export COCOTB=$(pwd)/cocotb-master
@@ -45,5 +45,5 @@ install:
   - python setup.py develop
 # Run test
 script:
-- cd tests; nosetests test_analysis.py 
+- nosetests tests/test_analysis.py 
 #test_interface.py --logging-level=INFO
