--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,8 @@ before_install:
   - conda info -a
   - conda create --yes -n test-environment numpy cython pytables scipy matplotlib pandas pyserial bitarray nose pyzmq pyyaml
   - source activate test-environment
-  - pip install progressbar-latest pyvisa pyvisa-py pyqtgraph mock
+  - pip install progressbar-latest pyvisa pyvisa-py pyqtgraph mock sphinx
+  - pip install https://github.com/uvemas/ViTables/archive/v2.1.zip
 #  - wget -O cocotb-master.zip https://github.com/potentialventures/cocotb/archive/master.zip 
 #  - unzip cocotb-master.zip
 #  - export COCOTB=$(pwd)/cocotb-master
