MAINT: update of init dut file

--- a/pybar/dut_configuration_mio.yaml
+++ b/pybar/dut_configuration_mio.yaml
@@ -9,9 +9,9 @@ CMD:
 
 TLU:
     TRIGGER_MODE        : 0
-    EN_INVERT_TRIGGER   : 0
-    EN_WRITE_TIMESTAMP  : 0
-    TRIGGER_LOW_TIMEOUT : 255
+    TRIGGER_SELECT      : 0 # TDC_IN_FROM_TDC, LEMO_TRIGGER_FROM_TDC, MONHIT
+    TRIGGER_INVERT      : 0
+    TRIGGER_VETO_SELECT : 255 # VETO_IN, FIFO_FULL
 
 CH4:
     INVERT_RX : 0  # 0: IBL modules (default), 1: DBM modules
