--- a/pybar/dut_configuration_mio_gpac.yaml
+++ b/pybar/dut_configuration_mio_gpac.yaml
@@ -9,6 +9,6 @@ CMD:
 
 TLU:
     TRIGGER_MODE        : 0
-    EN_INVERT_TRIGGER   : 0
-    EN_WRITE_TIMESTAMP  : 0
-    TRIGGER_LOW_TIMEOUT : 255
+    TRIGGER_SELECT      : 0 # CCPD_TDC_FROM_TDC, TDC_IN_FROM_TDC, LEMO_TRIGGER_FROM_TDC, MONHIT
+    TRIGGER_INVERT      : 0
+    TRIGGER_VETO_SELECT : 255 # VETO_IN, FIFO_FULL
