--- a/pybar/dut_configuration_mio_gpac.yaml
+++ b/pybar/dut_configuration_mio_gpac.yaml
@@ -12,3 +12,11 @@ TLU:
     TRIGGER_SELECT      : 0 # CCPD_TDC_FROM_TDC, TDC_IN_FROM_TDC, LEMO_TRIGGER_FROM_TDC, MONHIT
     TRIGGER_INVERT      : 0
     TRIGGER_VETO_SELECT : 255 # VETO_IN, FIFO_FULL
+
+TDC:
+    ENABLE               : 0
+    EN_WRITE_TIMESTAMP   : 0
+    EN_TRIGGER_DIST      : 0
+    EN_NO_WRITE_TRIG_ERR : 0
+    EN_INVERT_TDC        : 0
+    EN_INVERT_TRIGGER    : 0
