MAINT: add parameter decription

--- a/pybar/dut_configuration_mio.yaml
+++ b/pybar/dut_configuration_mio.yaml
@@ -8,18 +8,16 @@ CMD:
     OUTPUT_MODE : 0  # 0: positive edge (default), 2: Manchester code
 
 TLU:
-    TRIGGER_MODE        : 0
-    TRIGGER_SELECT      : 0 # TDC_IN_FROM_TDC, LEMO_TRIGGER_FROM_TDC, MONHIT
-    TRIGGER_INVERT      : 0
+    TRIGGER_MODE        : 0 # RX0_LEMO (0), TLU_NO_HAND_SHAKE (1), TLU_SIMPLE_HAND_SHAKE (2), TLU_DATA_HAND_SHAKE (3)
+    TRIGGER_SELECT      : 0 # TRG_FROM_RX2_TDC_INPUT (4), RX0_LEMO_INPUT (2), ADAPTER_CARD_MONHIT_INPUT (1), NO_TRG_INPUT (0)
+    TRIGGER_INVERT      : 0 # TRG_FROM_RX2_TDC_INPUT (4), RX0_LEMO_INPUT (2), ADAPTER_CARD_MONHIT_INPUT (1)
     TRIGGER_VETO_SELECT : 255 # VETO_IN, FIFO_FULL
 
 TDC:
-    ENABLE               : 0
-    EN_WRITE_TIMESTAMP   : 0
-    EN_TRIGGER_DIST      : 0
-    EN_NO_WRITE_TRIG_ERR : 0
-    EN_INVERT_TDC        : 0
-    EN_INVERT_TRIGGER    : 0
+    EN_TRIGGER_DIST      : 0  # MEASURE TRG / TDC LEADING EDGE DELAY WITH 640 MHz CLOCK
+    EN_NO_WRITE_TRIG_ERR : 0  # ONLY WRITE TDC WORD IF ASSIGNMENT TO TRG CAN BE DONE  
+    EN_INVERT_TDC        : 0  # TDC FIRST EDGE IS POSITIVE/NEGATIVE (0/1)
+    EN_INVERT_TRIGGER    : 0  # TRG FIRST EDGE IS POSITIVE/NEGATIVE (0/1)
 
 CH4:
     INVERT_RX : 0  # 0: IBL modules (default), 1: DBM modules
