--- a/tests/test_scans/configuration.yaml
+++ b/tests/test_scans/configuration.yaml
@@ -1,6 +1,6 @@
 working_dir :  # Module data will be written to this path. If not given, use path of this file. Default: not given / empty
 
-dut : ../../pybar/dut_mio.yaml  # DUT hardware configuration (.yaml). Change to dut_mio_gpac.yaml for GPAC support.
+dut : dut_mio.yaml  # DUT hardware configuration (.yaml). Change to dut_mio_gpac.yaml for GPAC support.
 dut_configuration : dut_configuration_mio.yaml  # DUT init configuration (.yaml). Change to dut_configuration_mio_gpac.yaml for GPAC support.
 
 fe_configuration :  # FE configuration file, text (.cfg) or HDF5 (.h5) file. If not given, latest valid configuration (run status FINISHED) will be taken. If a number is given, configuration from run with specified number will be taken.
